// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`noscriptImg() / activatePictureRef() without HTMLPictureElement (IE11) activatePictureRef() should still create an imageRef with selfRef 1`] = `
<img
  height="500"
  src="test_fluid_image.jpg"
  srcset="some srcSet"
  width="500"
/>
`;

exports[`noscriptImg() / activatePictureRef() without HTMLPictureElement (IE11) activatePictureRef() should still create an imageRef without selfRef 1`] = `
<img
  src="test_fluid_image.jpg"
  srcset="some srcSet"
/>
`;
